# RAG-Memory-Assistant

./: .gitignore  README.md  faq.py  grok.py  local_model.py  main.py  memory.json  pyproject.toml  requirements.txt  semantic_search.py  sematic_memory.py  test_embadding.py
data/: faq.json
llm/: config.py  grok_provider.py  ollama_provider.py  provider.py
rag/: embedder.py  retriever.py  test_retriever.py
