[project]
name = "rag-memory-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.43.0",
    "pathlib>=1.0.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
